--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</table>
 			</div>
 		</div>
-		<hr class="pb-1 m-auto background-white w-4/5"/>
+		<hr class="pb-1 m-auto background-white w-4/5">
 		<div class="py-3 px-2" id="skills">
 			<h2 class="pl-2 text-4xl">Skills</h2>
 
@@ -60,7 +60,7 @@
 			</tr>
 			</table>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<h3 class="text-3xl">Key Skills</h3>
@@ -72,7 +72,7 @@
 				<li>Kafka</li>
 			</ul>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<h3 class="text-3xl">Additional Skills</h3>
@@ -97,27 +97,29 @@
 			</ul>
 			</div>
 		</div>
-		<hr class="pb-1 m-auto background-white w-4/5"/>
+		<hr class="pb-1 m-auto background-white w-4/5">
 		<div class="py-3 px-2" id="experience">
 			<h2 class="pl-2 text-4xl">Professional Experience</h2>
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>Smart Geo Systems</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://smartgeosystems.ru/">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<h4 class="text-2xl">Senior Software Engineer</h4>
-			<p>
 			<ul class="list-disc">
 				<li>Old tasks.</li>
 				<li>Refactor old mono-repositories into a repository
 				with a new architecture and limited functionality.</li>
 				<li>Developing new services using Rust.</li>
 			</ul>
+			<p>
 			<span class="block text-right font-bold color-green">
 			go, rust, docker, kafka, ci\cd
 			</span>
@@ -138,16 +140,18 @@
 			<span class="block text-right font-bold">03.2022 - 06.2023</span>
 			</p>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>Wildberries</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://www.wildberries.ru/">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<h4 class="text-2xl">Intern</h4>
 			<p>
@@ -159,16 +163,18 @@
 			<span class="block text-right font-bold">06.2021 - 09.2021</span>
 			</p>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>Moscow Polytechnic University</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://mospolytech.ru/">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<h4 class="text-2xl">Intern</h4>
 			<p>
@@ -180,26 +186,30 @@
 			</p>
 			</div>
 		</div>
-		<hr class="pb-1 m-auto background-white w-4/5"/>
+		<hr class="pb-1 m-auto background-white w-4/5">
 		<div class="py-3 px-2" id="education">
 			<h2 class="pl-3 text-4xl">Education</h2>
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>Moscow Institute of Physics and Technology</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://mipt.ru/">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<h4 class="text-2xl">Master's degree</h4>
-			<table>
 			<p>
 			Information Security
 			</p>
+			<table>
+			<tr>
 			<td>Status:</td>
 			<td class="font-bold color-orange">Discontinued</td>
+			</tr>
 			</table>
 			<p>
 			<span class="block text-right font-bold color-green">
@@ -208,24 +218,28 @@
 			<span class="block text-right font-bold">2021 - 2022</span>
 			</p>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>Sber University</h3>
 			</td>
 			<td class="text-right pl-5">
 			<a class="color-blue text-2xl" href="https://sberuniversity.ru/">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<h4 class="text-2xl">Professional development courses</h4>
 			<p>
 			Kotlin and Java course
 			</p>
 			<table>
+			<tr>
 			<td>Status:</td>
 			<td class="font-bold color-green">Completed</td>
+			</tr>
 			</table>
 			<p>
 			<span class="block text-right font-bold color-green">
@@ -234,25 +248,29 @@
 			<span class="block text-right font-bold">2021 - 2021</span>
 			</p>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3 class="text-3xl">Moscow Polytechnic University</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://mospolytech.ru/">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<h4 class="text-2xl">Bachelor's degree</h4>
 			<p>
-			Information Technology<br/>
+			Information Technology<br>
 			Augmented and Visual Reality
 			</p>
 			<table>
+			<tr>
 			<td>Status:</td>
 			<td class="font-bold color-green">Completed</td>
+			</tr>
 			</table>
 			<p>
 			<span class="block text-right font-bold color-green">
@@ -262,18 +280,20 @@
 			</p>
 			</div>
 		</div>
-		<hr class="pb-1 m-auto background-white w-4/5"/>
+		<hr class="pb-1 m-auto background-white w-4/5">
 		<div class="py-3 px-2" id="projects">
 			<h2 class="pl-3 text-4xl">Pet Projects</h2>
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>lostsand.nvim</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://github.com/lostlang/lostsand.nvim">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<p>
 			A light Neovim theme written in Lua, with support for lsp,
@@ -281,32 +301,36 @@
 			<span class="block text-right font-bold color-green">lua</span>
 			</p>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>steamlike</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://github.com/lostlang/steamlike">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<p>
 			A web app creating pretty wait screen for streaming like a steam gallery.
 			<span class="block text-right font-bold color-green">svelte, js, ts, html, css</span>
 			</p>
 			</div>
-			<hr class="pb-1 m-auto background-white w-5/6"/>
+			<hr class="pb-1 m-auto background-white w-5/6">
 
 			<div class="mb-1 pl-5">
 			<table class="text-3xl w-full justify-between">
+			<tr>
 			<td>
 			<h3>LeetcodeGo</h3>
 			</td>
 			<td class="text-right">
 			<a class="color-blue text-2xl" href="https://github.com/lostlang/LeetcodeGo">(link)</a>
 			</td>
+			</tr>
 			</table>
 			<p>
 			My leetcode solution.
@@ -314,7 +338,7 @@
 			</p>
 			</div>
 		</div>
-		<hr class="pb-1 m-auto background-white w-4/5"/>
+		<hr class="pb-1 m-auto background-white w-4/5">
 	</main>
 	<footer>
 	</footer>
